--- a/css/styles.css
+++ b/css/styles.css
@@ -677,6 +677,7 @@ body {
 .check-label {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 9px;
   margin-bottom: 30px;
 }
